--- a/module5/casestudy/angular-casestudy-module5/src/app/facility-edit/facility-edit.component.html
+++ b/module5/casestudy/angular-casestudy-module5/src/app/facility-edit/facility-edit.component.html
@@ -1,137 +1,183 @@
 <div id="body" class="card text-center">
-<div id="menu">
-<div class="container mt-4">
-  <div class="row w-50 mx-auto">
-    <div class="row">
-      <h2>Edit facility</h2>
-      <form action="@{/resort/edit}" object="${facilityOject}" method="post">
-        <div class="form-outline mb-4">
-          <input field="*{id}" class="form-control" type="hidden"/>
-        </div>
+  <div id="menu">
+    <div class="container mt-4">
+      <div class="row w-50 mx-auto">
         <div class="row">
-
-          <div class="col-6">
+          <h2>Edit facility</h2>
+          <form [formGroup]="facilityForm" (ngSubmit)="editFacility()">
             <div class="form-outline mb-4">
-              <label class="form-label">Name </label>
-              <input field="*{nameFacility}" class="form-control"/>
+              <input class="form-control" type="hidden"/>
             </div>
+            <div class="row">
 
-            <div class="form-outline mb-4">
-              <label class="form-label">Area</label>
-              <input field="*{areaFacility}" class="form-control"/>
-            </div>
+              <div class="col-6">
+                <div class="form-outline mb-4">
+                  <label class="form-label">Name Facility</label>
+                  <input type="text" class="form-control" formControlName="nameFacility" name="nameFacility"/>
+                  <p style="color:red;"
+                     *ngIf="facilityForm.controls.nameFacility.hasError('required')&&facilityForm.controls.nameFacility.touched">
+                    không được để trống
+                  </p>
+                </div>
 
-            <div class="form-outline mb-4">
-              <label class="form-label">Cost</label>
-              <input field="*{costFacility}" class="form-control"/>
-            </div>
+                <div class="form-outline mb-4">
+                  <label class="form-label">Area Facility</label>
+                  <input type="text" class="form-control" formControlName="costFacility" name="areaFacility"/>
+                  <p style="color:red;"
+                     *ngIf="facilityForm.controls.costFacility.hasError('required')&&facilityForm.controls.nameFacility.touched">
+                    không được để trống
+                  </p>
+                  <p style="color:red;"
+                     *ngIf="facilityForm.controls.costFacility.hasError('pattern')&&facilityForm.controls.nameFacility.touched">
+                    không được chứa số
+                  </p>
+                </div>
 
-            <div class="form-outline mb-4">
-              <label class="form-label">Max People</label>
-              <input field="*{maxPeople}" class="form-control"/>
-            </div>
+                <div class="form-outline mb-4">
+                  <label class="form-label">Cost Facility</label>
+                  <input type="text" class="form-control" formControlName="costFacility" name="costFacility"/>
+                  <p style="color:red;"
+                     *ngIf="facilityForm.controls.costFacility.hasError('required')&&facilityForm.controls.costFacility.touched">
+                    không được để trống
+                  </p>
+                </div>
 
-            <div class="form-outline mb-4">
-              <label class="form-label">Name RentType</label>
-              <select field="*{rentType}" class="form-select"
-                      aria-label="Default select example">
-                <option each="renType: ${rentTypeList}"
-                        value="${renType.id}"
-                        text="${renType.nameRentType}"
-                >
-                </option>
-              </select>
-            </div>
+                <div class="form-outline mb-4">
+                  <label class="form-label">Max People</label>
+                  <input type="text" class="form-control" formControlName="maxPeople" name="maxPeople"/>
+                  <p style="color:red;"
+                     *ngIf="facilityForm.controls.maxPeople.hasError('required')&&facilityForm.controls.maxPeople.touched">
+                    không được để trống
+                  </p>
+                </div>
 
-
-          </div>
-
-          <!---------------------------->
-
-
-
-
-          <div class="col-6">
-            <div class="form-outline mb-4">
-              <label class="form-label">Name Facility Type</label>
-              <select field="*{facilityType}" class="form-select" id="selectType"
-                      aria-label="Default select example" onchange="getForm()">
-                <option each="facilityType: ${facilityTypeList}"
-                        value="${facilityType.id}"
-                        text="${facilityType.nameFacilityType}">
-                </option>
-              </select>
-            </div>
-
-            <div id="room-facility">
-              <div class="form-outline mb-4">
-                <label class="form-label">facility Free</label>
-                <input field="*{facilityFree}" class="form-control"/>
-              </div>
-            </div>
+                <div class="form-outline mb-4">
+                  <label class="form-label">Name Rent Type</label>
+                  <select class="form-select" aria-label="Default select example" formControlName="rentType"
+                          name="rentType">
+                    <option>năm</option>
+                    <option>tháng</option>
+                    <option>ngày</option>
+                    <option>giờ</option>
+                  </select>
+                </div>
 
 
-            <div id="villa-facility" style="display: none">
-              <div class="form-outline mb-4">
-                <label class="form-label">Pool Area</label>
-                <input field="*{poolArea}" class="form-control"/>
               </div>
 
+              <!---------------------------->
+
+              <div class="col-6">
+                <!--                                tạo sự kiện onchange getForm để tạo fusition-->
+
+                <div class="form-outline mb-4">
+                  <label class="form-label">Name Facility Type</label>
+                  <select id="selectType" class="form-select"
+                          aria-label="Default select example" onchange="getForm()"
+                          formControlName="facilityType" name="facilityType">
+                    <option>villa</option>
+                    <option>house</option>
+                    <option>room</option>
+                  </select>
+                </div>
+                <div id="room-facility">
+
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Facility Free</label>
+                    <input type="text" class="form-control" formControlName="facilityFree" name="facilityFree"/>
+                    <p style="color:red;"
+                       *ngIf="facilityForm.controls.facilityFree.hasError('required')&&facilityForm.controls.facilityFree.touched">
+                      không được để trống
+                    </p>
+                  </div>
+
+                </div>
+
+                <div id="villa-facility" style="display: none">
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Pool Area</label>
+                    <input type="text" class="form-control" formControlName="poolArea" name="poolArea"/>
+                    <p style="color:red;"
+                       *ngIf="facilityForm.controls.poolArea.hasError('required')&&facilityForm.controls.poolArea.touched">
+                      không được để trống
+                    </p>
+                    <p style="color:red;"
+                       *ngIf="facilityForm.controls.poolArea.hasError('pattern')&&facilityForm.controls.poolArea.touched">
+                      phải là số nguyên dương
+                    </p>
+                  </div>
+                </div>
+
+                <div id="house-facility" style="display: none">
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Kind of room</label>
+                    <input type="text" class="form-control" formControlName="kindOfRoom"
+                           name="descriptionOtherConvenience"/>
+                    <p style="color:red;"
+                       *ngIf="facilityForm.controls.kindOfRoom.hasError('required')&&facilityForm.controls.kindOfRoom.touched">
+                      không được để trống
+                    </p>
+
+                  </div>
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Description Other Convenience</label>
+                    <input type="text" class="form-control" formControlName="descriptionOtherConvenience"
+                           name="descriptionOtherConvenience"/>
+                    <p style="color:red;"
+                       *ngIf="facilityForm.controls.descriptionOtherConvenience.hasError('required')&&facilityForm.controls.descriptionOtherConvenience.touched">
+                      không được để trống
+                    </p>
+                  </div>
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Number Of Floors</label>
+                    <input type="text" class="form-control" formControlName="numberOfFloors" name="numberOfFloors"/>
+                    <p style="color:red;"
+                       *ngIf="facilityForm.controls.numberOfFloors.hasError('required')&&facilityForm.controls.numberOfFloors.touched">
+                      không được để trống
+                    </p>
+                    <p style="color:red;"
+                       *ngIf="facilityForm.controls.numberOfFloors.hasError('pattern')&&facilityForm.controls.numberOfFloors.touched">
+                      phải là số nguyên dương
+                    </p>
+                  </div>
+
+                </div>
+
+
+              </div>
             </div>
+            <button type="submit" class="btn btn-primary btn-block bg-momo">
+              edit
+            </button>
 
-            <div id="house-facility" style="display: none">
-              <div class="form-outline mb-4">
-                <label class="form-label">Standard Room</label>
-                <input field="*{standardRoom}" class="form-control"/>
-              </div>
-
-
-              <div class="form-outline mb-4">
-                <label class="form-label">Description Other Convenience</label>
-                <input field="*{descriptionOtherConvenience}" class="form-control"/>
-              </div>
-
-              <div class="form-outline mb-4">
-                <label class="form-label">Number Of Floors</label>
-                <input field="*{numberOfFloors}" class="form-control"/>
-              </div>
-
-            </div>
-          </div>
+            <a [routerLink]="['/facility-list']">
+              <button type="button" class="btn btn-primary btn-block bg-momo">
+                Back To List
+              </button>
+            </a>
+          </form>
         </div>
-
-        <button type="submit" class="btn btn-primary btn-block bg-momo">
-          save
-        </button>
-        <a [routerLink]="['/facility-list']">
-          <button type="button" class="btn btn-primary btn-block bg-momo">
-            Back To List
-          </button>
-        </a>
-      </form>
-
+      </div>
     </div>
   </div>
-</div>
-</div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
 
-  function getForm(){
+  function getForm() {
     let valueSelectType = $('#selectType').val();
-    if(valueSelectType === '3'){
+    if (valueSelectType === '3') {
       $('#room-facility').show();
       $('#villa-facility').hide();
       $('#house-facility').hide();
     }
-    if(valueSelectType === '2'){
+    if (valueSelectType === '2') {
       $('#house-facility').show();
       $('#room-facility').hide();
       $('#villa-facility').hide();
     }
-    if(valueSelectType === '1'){
+    if (valueSelectType === '1') {
       $('#villa-facility').show();
       $('#house-facility').show();
       $('#room-facility').hide();
