--- a/module5/casestudy/angular-casestudy-module5/src/app/footer/footer.component.html
+++ b/module5/casestudy/angular-casestudy-module5/src/app/footer/footer.component.html
@@ -1,35 +1,170 @@
-<!--<div class="card-footer text-muted clearfix" style="text-align: center">-->
-<!--  ToNgPhUc@gmail.com-->
+
+
+<!--<div class="container-fluid text-silver text-center">-->
+
+<!--  <div class="row" style="background: silver">-->
+<!--    <div class="col-sm-4">-->
+<!--      <img src="module5/casestudy/angular-casestudy-module5/src/app/js/kisspng-logo-travel-com-brand-net-travel-black-5b3e0a27274d65.595599821530792487161.png"-->
+<!--           style="height: auto" width="150px">-->
+
+<!--      <div style="color: black ;text-align: left">-->
+<!--        <p>© 2022 Zozo. Powered by iNET</p><br>-->
+<!--        <p>© 2022 Zozo. ToNgPhuc95@gmial.com</p>-->
+<!--        <p>quản lí vé du lịch trên thiết bị di động</p>-->
+<!--      </div>-->
+<!--      <img src="https://zozo.vn/public/theme/touched/images/icon-footer/app_store.svg">-->
+<!--      <img src="https://zozo.vn/public/theme/touched/images/icon-footer/google_play.svg">-->
+<!--    </div>-->
+<!--    <div class="col-sm-4 " style="text-align: left">-->
+<!--      <h5>Đà Nẵng</h5>-->
+<!--      <p>Tòa nhà S-HOME, Số 56 Nguyễn Tri Phương, Phường Chính Gián, Quận Thanh Khê</p>-->
+<!--      <p>Email: ToNgPhuc95@gmail.com</p>-->
+<!--      <p>Hotline: 0936.231.322</p>-->
+<!--    </div>-->
+
+<!--    <div class="col-sm-4 " style="text-align: left">-->
+<!--      <h5>Hồ Chí Minh</h5>-->
+<!--      <p>Tòa nhà S-HOME, Số 56 Cách mạng tháng 8 Hồ chí minh,</p>-->
+<!--      <p>Email: ToNgPhuc95@gmail.com</p>-->
+<!--      <p>Hotline: 0936.231.322</p>-->
+<!--    </div>-->
+
+<!--  </div>-->
 <!--</div>-->
+<!-- ==============================================
+    CONTACT
+    =============================================== -->
+<!--<section id="contact" class="add-padding border-top-color2">-->
 
-<div class="container-fluid text-silver text-center">
+<!--  <div class="container text-center">-->
 
-  <div class="row" style="background: silver">
-    <div class="col-sm-4">
-      <img src="module5/casestudy/angular-casestudy-module5/src/app/js/kisspng-logo-travel-com-brand-net-travel-black-5b3e0a27274d65.595599821530792487161.png"
-           style="height: auto" width="150px">
+<!--    <div class="row">-->
 
-      <div style="color: black ;text-align: left">
-        <p>© 2022 Zozo. Powered by iNET</p><br>
-        <p>© 2022 Zozo. ToNgPhuc95@gmial.com</p>
-        <p>quản lí vé du lịch trên thiết bị di động</p>
+<!--      <div class="col-sm-6 col-md-5 text-right scrollimation fade-up d1">-->
+
+<!--        <h1 class="big-text">Contact Me</h1>-->
+
+<!--        <p class="lead">Software Engineer. Lawyer.<br>Experienced Manager. Entrepreneur.</p>-->
+
+<!--        <p>Sinatra, Ruby on Rails, JavaScript, Node.js, Express.js, Backbone.js, Handlebars.js, jQuery, AJAX, HTML5, CSS3, SASS, SQL, APIs, Git, GitHub/Bitbucket, WordPress, Heroku, Responsive/Mobile Development.-->
+
+<!--        <p>Please feel free to contact me with questions, comments or collaborations.</p>-->
+
+<!--        <p>For more information, <a href="http://korenlc.com" target="_blank">visit my blog.</a></p>-->
+
+<!--      </div>-->
+
+<!--      &lt;!&ndash;=== Contact Form ===&ndash;&gt;-->
+
+<!--      <form id="contact-form" class="col-sm-6 col-md-offset-1 scrollimation fade-left d3" action="contact.php" method="post" novalidate>-->
+
+<!--        <div class="form-group">-->
+<!--          <label class="control-label" for="contact-name">Name</label>-->
+<!--          <div class="controls">-->
+<!--            <input id="contact-name" name="contactName" placeholder="Your name" class="form-control requiredField" data-new-placeholder="Your name" type="text" data-error-empty="Please enter your name">-->
+<!--            <i class="fa fa-user"></i>-->
+<!--          </div>-->
+<!--        </div>&lt;!&ndash; End name input &ndash;&gt;-->
+
+<!--        <div class="form-group">-->
+<!--          <label class="control-label" for="contact-mail">Email</label>-->
+<!--          <div class=" controls">-->
+<!--            <input id="contact-mail" name="email" placeholder="Your email" class="form-control requiredField" data-new-placeholder="Your email" type="email" data-error-empty="Please enter your email" data-error-invalid="Invalid email address">-->
+<!--            <i class="fa fa-envelope"></i>-->
+<!--          </div>-->
+<!--        </div>&lt;!&ndash; End email input &ndash;&gt;-->
+
+<!--        <div class="form-group">-->
+<!--          <label class="control-label" for="contact-message">Message</label>-->
+<!--          <div class="controls">-->
+<!--            <textarea id="contact-message" name="comments"  placeholder="Your message" class="form-control requiredField" data-new-placeholder="Your message" rows="6" data-error-empty="Please enter your message"></textarea>-->
+<!--            <i class="fa fa-comment"></i>-->
+<!--          </div>-->
+<!--        </div>&lt;!&ndash; End textarea &ndash;&gt;-->
+
+<!--        <p><button name="submit" type="submit" class="btn btn-color2 btn-block" data-error-message="Error!" data-sending-message="Sending..." data-ok-message="Message Sent"><i class="fa fa-paper-plane"></i>Send Message</button></p>-->
+<!--        <input type="hidden" name="submitted" id="submitted" value="true" />-->
+
+<!--      </form>&lt;!&ndash; End contact-form &ndash;&gt;-->
+
+<!--    </div>-->
+
+<!--  </div>-->
+
+<!--</section>-->
+
+<!--&lt;!&ndash; ==============================================-->
+<!--FOOTER-->
+<!--=============================================== &ndash;&gt;-->
+
+<!--<footer id="main-footer" class="add-padding border-top-color2">-->
+
+<!--  <div class="container">-->
+
+<!--    <p><a href="http://korenlc.com" target="_blank">VISIT MY BLOG</a></p><br>-->
+
+<!--    <ul class="social-links text-center">-->
+<!--      <li><a href="https://twitter.com/korenlc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a></li>-->
+<!--      <li><a href="https://plus.google.com/u/0/+KLCohen/posts/p/pub" target="_blank"><i class="fa fa-google-plus fa-fw"></i></a></li>-->
+<!--      <li><a href="https://www.linkedin.com/in/korenlesliecohen" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a></li>-->
+<!--    </ul>-->
+
+<!--    <p class="text-center">&copy; 2014 - Koren Leslie Cohen</p>-->
+
+<!--  </div>-->
+
+<!--</footer>-->
+
+<!-- Site footer -->
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
       </div>
-      <img src="https://zozo.vn/public/theme/touched/images/icon-footer/app_store.svg">
-      <img src="https://zozo.vn/public/theme/touched/images/icon-footer/google_play.svg">
-    </div>
-    <div class="col-sm-4 " style="text-align: left">
-      <h5>Đà Nẵng</h5>
-      <p>Tòa nhà S-HOME, Số 56 Nguyễn Tri Phương, Phường Chính Gián, Quận Thanh Khê</p>
-      <p>Email: ToNgPhuc95@gmail.com</p>
-      <p>Hotline: 0936.231.322</p>
-    </div>
 
-    <div class="col-sm-4 " style="text-align: left">
-      <h5>Hồ Chí Minh</h5>
-      <p>Tòa nhà S-HOME, Số 56 Cách mạng tháng 8 Hồ chí minh,</p>
-      <p>Email: ToNgPhuc95@gmail.com</p>
-      <p>Hotline: 0936.231.322</p>
-    </div>
+      <div class="col-xs-6 col-md-3">
+        <h6>Categories</h6>
+        <ul class="footer-links">
+          <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
+          <li><a href="http://scanfcode.com/category/front-end-development/">UI Design</a></li>
+          <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
+          <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
+          <li><a href="http://scanfcode.com/category/android/">Android</a></li>
+          <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
+        </ul>
+      </div>
 
+      <div class="col-xs-6 col-md-3">
+        <h6>Quick Links</h6>
+        <ul class="footer-links">
+          <li><a href="http://scanfcode.com/about/">About Us</a></li>
+          <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
+          <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
+          <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
+          <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr>
   </div>
-</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by
+          <a href="#">Scanfcode</a>.
+        </p>
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <ul class="social-icons">
+          <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+          <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
