--- a/module5/casestudy/angular-casestudy-module5/src/app/furama/furama.component.html
+++ b/module5/casestudy/angular-casestudy-module5/src/app/furama/furama.component.html
@@ -1,7 +1,7 @@
 
-<div class="container-fluid text-white text-center">
-  <img src="https://thienthumobile.vn/anh-co-dep/imager_30_48563_700.jpg" style="  width: 100%;height: 300px">
-</div>
+<!--<div class="container-fluid text-white text-center">-->
+<!--  <img src="https://thienthumobile.vn/anh-co-dep/imager_30_48563_700.jpg" style="  width: 100%;height: 300px">-->
+<!--</div>-->
 
 
 <div class="container mt-5">
